--- a/src/components/Missions/mission.css
+++ b/src/components/Missions/mission.css
@@ -4,28 +4,21 @@
   align-items: center;
   justify-content: space-evenly;
   border: 1px solid white;
-  width: 496px;
-  height: 150px;
   border-radius: 10px;
-  margin: 10px;
+  margin: 5px;
   background-color: rgba(0, 0, 0, 0.696);
+  padding: 10px;
 }
 
-.missions {
-  display: flex;
-  text-align: center;
-  justify-content: center;
-  align-items: center;
-  font-size: 28px;
+div.container.missions {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  font-size: 20px;
 }
 
-.container.missions {
-  flex-direction: row;
-  margin: 80px 0;
-  max-height: 2360px;
-  width: 1200px;
-  flex-wrap: wrap;
-  background-color: #ffffff21;
+section.container.missions {
+  margin: 20px 0;
+  /* width: 1200px; */
 }
 .mission-info {
   display: flex;
@@ -34,14 +27,20 @@
   width: 100%;
 }
 
-.mission-info p{
-  margin: 27 18 13 27;
+.mission-info p, .mission-info h3[data-testid="mission-name"]{
+  text-align: center;
   max-width: 150px;
   text-align: center;
-  font-size: 18px;
+  font-size: 15px;
 }
 
 .mission-info p img{
   width: 20px;
   height: 20px;
+}
+
+.div-footer{
+  display: flex;
+  align-items: stretch;
+  justify-content: space-evenly;
 }
